# tech-demo-python-packaging

./: .gitignore  README.md
01_terminal_helloworld/: pyproject.toml
01_terminal_helloworld/src/helloworld-cli/: __init__.py
01_terminal_helloworld/src/helloworld_cli/: __init__.py  __main__.py
01_terminal_helloworld/tests/: test_dummy.py
01a_terminal_helloworld_setuptools/: README.md  pyproject.toml
01a_terminal_helloworld_setuptools/src/helloworldcli/: __init__.py
01a_terminal_helloworld_setuptools/tests/: test_dummy.py
01b_terminal_helloworld_hatch/: LICENSE  pyproject.toml
01b_terminal_helloworld_hatch/src/helloworldcli/: __main__.py
02_gui_helloworld/: README.md  pyproject.toml
02_gui_helloworld/src/helloworld-gui/: __init__.py  __main__.py
02_gui_helloworld/src/helloworldgui/: __init__.py
02_gui_helloworld/tests/: test_dummy.py
03_i18n_helloworld/: pyproject.toml  setup.py
03_i18n_helloworld/po/: de.po
03_i18n_helloworld/src/helloworld-int/: __init__.py  __main__.py
03_i18n_helloworld/src/helloworld-int/po/: jp.po  messages.pot
03_i18n_helloworld/tests/: test_dummy.py
03_i18n_setuptools/: README.md  pyproject.toml  setup.py
03a_i18n_setuptools/: README.md  pyproject.toml  setup.py
03a_i18n_setuptools/src/helloworldint/: __main__.py
03b_i18n_hatch/: README.md  hatch_build.py  pyproject.toml
03b_i18n_hatch/src/helloworldint/: __init__.py  __main__.py
03b_i18n_hatch/src/helloworldint/po/: de.po  jp.po
04_as_user_and_root/: README.md  pyproject.toml
04_as_user_and_root/src/rootuser/: __init__.py  __main__.py
05_two_import_packages/: README.md  pyproject.toml
05_two_import_packages/src/helloworld/: __main__.py  hello.py
05_two_import_packages/src/howareyou/: __init__.py  __main__.py
05_two_import_packages/tests/integration/: test_integration.py
05_two_import_packages/tests/unit_helloworld/: test_helloworld.py
05_two_import_packages/tests/unit_howareyou/: test_howareyou.py
06_test_coverage/: README.md  pyproject.toml
06_test_coverage/src/banana/: __main__.py
06_test_coverage/src/fruits/: __init__.py  __main__.py
06_test_coverage/tests/: test_banana.py  test_fruits.py
07_multi_coverage/: README.md  do_combined_coverage.sh
07_multi_coverage/fruit/: pyproject.toml
07_multi_coverage/fruit/src/cherry/: __main__.py
07_multi_coverage/fruit/tests/: test_fruits.py
07_multi_coverage/vegetable/: pyproject.toml
07_multi_coverage/vegetable/src/pumpkin/: __main__.py
07_multi_coverage/vegetable/tests/: test_veggies.py
08_centralize_meta_data/: README.md  pyproject.toml
08_centralize_meta_data/src/hellocentral/: __init__.py  __main__.py
