[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
# See https://hatch.pypa.io for more details about that build system.

[project]
name = "helloworld-cli"
version = "0.0.1"
description = """A demo printing Hello World on stdout."""
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

[project.scripts]
helloworldterminal = "helloworldcli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ['src/helloworldcli']
