[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "helloworld-gui"
version = "0.0.1"
description = """A demo show Hello World in a GUI window."""
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

# Dependent packages are installed automatically.
dependencies = [
    "PySimpleGUI",
    "pytest"
]

[tool.setuptools.package-dir]
helloworldgui = 'src/helloworldgui'

[project.scripts]
helloworldwindow = "helloworldgui.__main__:main"

