[build-system]
requires = [
    'setuptools',
    # https://github.com/breezy-team/setuptools-gettext
    # 'setuptools-gettext@git+https://github.com/breezy-team/setuptools-gettext.git'
]
build-backend = "setuptools.build_meta"

[project]
name = "helloworld-international"
version = "0.0.1"
description = """A demo translating Hello World in a GUI window."""
requires-python = ">=3.8"

dependencies = [
    "PySimpleGUI",
]

authors = [
    {name = "Christian Buhtz", email = "c.buhtz@posteo.jp"}
]

[project.urls]
homepage = "https://codeberg.org/buhtz/tech-demo-python-packaging"
repository = "https://codeberg.org/buhtz/tech-demo-python-packaging"

[project.scripts]
helloworldint = "helloworldint.__main__:main"

[tool.setuptools.package-dir]
helloworldint = 'src/helloworld-int'

[tool.setuptools.package-data]
# Directories not allowed. Files only.
helloworldint = [
    'locales/*/LC_MESSAGES/*.mo',
]

