[build-system]
requires = ['setuptools']
build-backend = "setuptools.build_meta"

[project]
name = "helloworld-international"
version = "0.0.1"
description = """A demo translating Hello World in a GUI window."""
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

dependencies = [
    "PySimpleGUI",
]

[project.scripts]
hallowelt = "helloworldint.__main__:main"

[tool.setuptools.package-dir]
helloworldint = 'src/helloworldint'

[tool.setuptools.package-data]
# Keep in mind: Directories not allowed. Files only.
helloworldint = [
    'locales/*/LC_MESSAGES/*.mo',
]

