[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'
# See https://hatch.pypa.io for more details about that build system.

[project]
name = "helloworld-international"
version = "0.0.1"
description = """A demo translating Hello World in a GUI window."""
requires-python = ">=3.8"

dependencies = [
    "PySimpleGUI",
]

authors = [
    {name = "Christian Buhtz", email = "c.buhtz@posteo.jp"}
]

[project.urls]
homepage = "https://codeberg.org/buhtz/tech-demo-python-packaging"
repository = "https://codeberg.org/buhtz/tech-demo-python-packaging"

[project.scripts]
hallowelt = "helloworldint.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ['src/helloworldint']

[tool.hatch.build]
include = ['src/helloworldint']
exclude = ['src/helloworldint/po']
artifacts = ['src/helloworldint/locales/*/LC_MESSAGES/*.mo']

# The hatch build-backend looks for custom build steps in "hatch_build.py"
# by default.
# [tool.hatch.build.hooks.custom]
# path = 'hatch_build.py'

