[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "helloworld-international"
version = "0.0.1"
description = """A demo translating Hello World in a GUI window."""
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

dependencies = [
    "PySimpleGUI",
]

[project.scripts]
hallowelt = "helloworldint.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ['src/helloworldint']

[tool.hatch.build]
exclude = ['src/helloworldint/po']
artifacts = ['src/helloworldint/locales/*/LC_MESSAGES/*.mo']

# The hatch build-backend looks for custom build steps in "hatch_build.py"
# by default.
[tool.hatch.build.hooks.custom]
# path = 'hatch_build.py'
