[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Banana"
version = "0.0.1"
description = """A demo demonstrating test coverage."""
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"

[project.scripts]
bananacli = "banana.__main__:main"

[tool.setuptools.package-dir]
banana = "src/banana"

[tool.coverage.run]
command_line = "--module pytest --verbose"
source = ["banana"]

[tool.coverage.report]
show_missing = true
