[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fruits"
version = "0.0.1"
license = {file = "LICENSE"}
requires-python = ">=3.8"

[project.scripts]
cherry = "cherry.__main__:main"

[tool.setuptools.package-dir]
cherry = "src/cherry"

[tool.coverage.run]
command_line = "--module pytest --verbose"
source = ["cherry"]

