[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vegetables"
version = "0.0.1"
license = {file = "LICENSE"}
requires-python = ">=3.8"

[project.scripts]
pumpkin = "pumpkin.__main__:main"

[tool.setuptools.package-dir]
pumpkin = "src/pumpkin"

[tool.coverage.run]
command_line = "--module pytest --verbose"
source = ["pumpkin"]

